Fix fdo#60754 - no translations for langs sorting after qtz

Adjust check to not rely on lexicographical order. This amends
8ae3ddca7e99d2bdbaadd5e0c82de2f0fbd30f91.

Change-Id: I5023b07af819eb09ea9dc569bdbac806f936485f