l10ntools/source/stringmerge.cxx
@@ -132,13 +132,14 @@ void StringParser::Merge(
     MergeDataFile aMergeDataFile(
         rMergeSrc, static_cast<OString>( m_pSource->name ), false );
     const std::vector<OString> vLanguages = aMergeDataFile.GetLanguages();
-    if( vLanguages.size()>=2 && vLanguages[0] != m_sLang )
+    if( vLanguages.size()>=2 &&
+        vLanguages[vLanguages[0]=="qtz" ? 1 : 0] != m_sLang )
     {
         std::cerr
             << "stringex error: given language conflicts with "
             << "language of Mergedata file: "
             << m_sLang.getStr() << " - "
-            << vLanguages[vLanguages[0]=="qtz" ? 0 : 1].getStr() << std::endl;
+            << vLanguages[vLanguages[0]=="qtz" ? 1 : 0].getStr() << std::endl;
         return;
     }
 
